--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
                 <a href="#">Contact Us</a>
                 <input type="text" placeholder="Search here...">
                 <div class="language-dropdown">
-                    <a href="#">EN</a>
-                </div>
+                    <span class="globe-icon">🌐</span> 
+                    <select>
+                      <option value="en">EN</option>
+                    </select>               
+                 </div>
                 <div class="dark-mode-toggle">
                     <span>Dark Mode</span>
                     <label class="switch">
-                        <input type="checkbox">
-                        <span class="slider round"></span>
+                      <input type="checkbox">
+                      <span class="slider round"></span>
                     </label>
+                    <span class="toggle-text">OFF</span>
                 </div>
             </nav>
         </div>
